Changed About Me stylesheet to prevent profile pic from overlapping with the bio section

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -295,8 +295,8 @@ h6, .h6 {
 
 .profile-pic {
   border: 1px solid gray;
-  
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .card-block {
@@ -329,3 +329,4 @@ h6, .h6 {
 .nav-masthead .active {
   color: rgba(255, 255, 255, 0.9)
 }
+
